test_compiler/errors/e21.gm
Procedure foo()
{
    Graph G;
    Int x;
    Bool z;
    z = (Bool) 2.0;
    x = (Int) True;
    x = (Int) G;
}
